<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_custom_phrase_key"
        style="@style/ListWordsName"
        />
    <EditText
        android:id="@+id/custom_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/replace"
        />
    <TextView
        style="@style/ListWordsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_custom_phrase_value"
        />
    <EditText
        android:id="@+id/custom_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
